[metadata]
name = bigmultipipe
description = Tools for pipeline processing of large data structures
author =    Jeff Morgenthaler
license = MIT
version = 0.0.1
github_project = jpmorgen/BigMultiPipe

[options]
#packages = bigmultipipe
packages = find:

install_requires =
  requests
  importlib; python_version >= "3.6"
  sphinx_astropy
